# vCard

./: README.md  index.html  index.json  manifest.json  specs.json  toc.html  toc.json  xrefmap.yml
adr/: 0001-parse-returns-list.md  0002-strongly-typed-api.md  0003-dotnet-version-support.md  0004-vcard-version-4-only.md
docs/: .gitignore  docfx.json  filterConfig.yml  index.md  toc.yml
dotnet/: README.md  VCard.sln  index.html  sample.vcf  toc.html  toc.json
public/: main.css
python/: .gitignore  README.md  index.html
rust/: .gitignore  Cargo.toml  README.md  index.html
rust/src/: lib.rs
rust/tests/: test_negative.rs  test_testcases.rs
testcases/: README.md  address_multiple_types.json  address_multiple_types.vcf  basic_personal_contact.json  basic_personal_contact.vcf  business_contact.json  business_contact.vcf  calendar_properties.json  calendar_properties.vcf  case_insensitive_properties.json  case_insensitive_properties.vcf  clientpidmap_property.json  clientpidmap_property.vcf  complete_contact_all_properties.json  complete_contact_all_properties.vcf  complex_structured_address.json  complex_structured_address.vcf  complex_structured_name.json  complex_structured_name.vcf  contact_with_multiple_phones_emails.json  contact_with_multiple_phones_emails.vcf  custom_extension_properties.json  custom_extension_properties.vcf  email_multiple_types.json  email_multiple_types.vcf  empty_structured_components.json  empty_structured_components.vcf  escaped_characters.json  escaped_characters.vcf  geographic_coordinates.json  geographic_coordinates.vcf  (+55 more)
(+94 files in other folders)
